--- a/src/css/goal.css
+++ b/src/css/goal.css
@@ -69,13 +69,15 @@
             rgba(0, 0, 0, 1) 20%,
             rgba(0, 0, 0, 1) 100%);
 
-    mask-image: linear-gradient(to bottom,
+    mask-image:linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 5%, rgb(231 233 244) 10%, rgb(228 233 245) 15%, rgb(230 232 245) 20%, rgb(246 241 246) 100%)
+     /* linear-gradient(to bottom,
             rgba(0, 0, 0, 0) 0%,
             rgba(0, 0, 0, 0.2) 5%,
             rgba(0, 0, 0, 0.5) 10%,
             rgba(0, 0, 0, 0.8) 15%,
             rgba(0, 0, 0, 1) 20%,
             rgba(0, 0, 0, 1) 100%);
+             */
 }
 
 .goal-section::before {
@@ -112,7 +114,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.85);
     z-index: 2;
     pointer-events: none;
 }
