--- a/src/css/questions.css
+++ b/src/css/questions.css
@@ -187,6 +187,8 @@
 
     background: none;
     border: none;
+    margin: 0;
+    padding: 24px 28px;
 
     color: #dcdcdc;
     font-size: 18px;
@@ -203,7 +205,7 @@
 .question-inner {
     background: #0c0c10;
     border-radius: 17px;
-    /* padding: 24px 28px; */
+    overflow: hidden;
 }
 
 .icon {
